fixed overflow

--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -554,7 +554,7 @@ nav {
     display: flex;
     flex-direction: row;
     flex-wrap: nowrap;
-    align-items: center;
+    align-items: flex-start;
     overflow-x: auto;
     max-width: 100%;
     // background-color: red;
